--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html>
   <head>
     <title>Homepage, bitches</title>
-
-    
+    <script src="./static/app.js" defer></script>
   </head>
-  
   <body>
-    Hello world?
+    <div id="container"></div>
   </body>
 <html>
