--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Homepage, bitches</title>
+    <link rel="shortcut icon" type="image/ico" href="./favicon.ico"/>
     <link rel="stylesheet" href="./static/main.css">
     <script src="./static/app.js" defer></script>
   </head>
