markdown renders as html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Homepage, bitches</title>
     <link rel="shortcut icon" type="image/ico" href="./favicon.ico"/>
     <link rel="stylesheet" href="./static/main.css">
+    <!--<link rel="stylesheet" hre="https://raw.githubusercontent.com/sindresorhus/github-markdown-css/gh-pages/github-markdown.css">-->
     <script src="./static/app.js" defer></script>
   </head>
   <body>
