--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <html>
   <head>
-    <title>Homepage, bitches</title>
+    <title>eeclaire</title>
     <link rel="shortcut icon" type="image/ico" href="./favicon.ico"/>
-    <link rel="stylesheet" href="./static/main.css">
+    <link rel="stylesheet" href="./main.css">
     <!--<link rel="stylesheet" hre="https://raw.githubusercontent.com/sindresorhus/github-markdown-css/gh-pages/github-markdown.css">-->
-    <script src="./static/app.js" defer></script>
+    
   </head>
   <body>
     <div id="container"></div>
+    <script src="/app.js" ></script>
   </body>
 <html>
+  
