tried to fix references in index.html

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <title>eeclaire</title>
     <link rel="shortcut icon" type="image/ico" href="./favicon.ico"/>
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./static/main.css">
     <!--<link rel="stylesheet" hre="https://raw.githubusercontent.com/sindresorhus/github-markdown-css/gh-pages/github-markdown.css">-->
     
   </head>
   <body>
     <div id="container"></div>
-    <script src="/app.js" ></script>
+    <script src="./static/app.js" ></script>
   </body>
 <html>
   
